# IceSDK

./: .clang-format  .gitmodules  BUILD.gn  CMakeLists.txt
.github/workflows/: linux_emscripten.yml  main.yml  pc_linux.yml  pc_windows.yml  win32_emscripten.yml
Benchmarks/: BUILD.gn
Examples/BareBones/: main.cc
IceSDK/: BUILD.gn  GameBase.cc  GameBase.h  IceSDK.gni  pch.h
IceSDK/ECS/: Entity.h  EntityExtension.cc  Scene.cc  Scene.h
IceSDK/ECS/Systems/: CameraSystem.cc
IceSDK/Graphics/: EntityHelper.cc  EntityHelper.h  GraphicsEntityHelper.cc  Texture2D.cc
IceSDK/Graphics/Debug/: Draw.h
IceSDK/Graphics/Fonts/: FontAtlas.h  FontFace.cc  FontFace.h  FontManager.cc  FontManager.h
IceSDK/Graphics/Shaders/: fs_sprite.sc  varying.def.sc  vs_sprite.sc
IceSDK/Graphics/SpriteBatch/: SpriteBatch.cc  SpriteBatch.h
IceSDK/Graphics/Systems/: SpriteRenderingSystem.cc  SpriteRenderingSystem.h  TextRenderingSystem.cc
IceSDK/Input/: InputPipeline.cc  InputPipeline.h  KeyboardMods.h
IceSDK/Input/Components/: MouseInputComponent.h
IceSDK/Input/Systems/: KeyboardInputSystem.cc  MouseInputSystem.cc
IceSDK/Memory/: Allocator.cc  Allocator.h  Buffer.cc  GarbageCollector.cc  GarbageCollector.h
IceSDK/Physics/: EntityHelper.h  PhysicsEntityHelper.cc  PhysicsSystem.cc  PhysicsSystem.h
IceSDK/Physics/Components/: RigidbodyComponent.h  SolidGroundComponent.h
IceSDK/Physics/Systems/: PhysicsSystem.cc  PhysicsSystem.h
IceSDK/Utils/: Buffer.h  FileSystem.cc  FileSystem.h  Jenkins.h  Math.h  String.h
IceSDK/include/IceSDK/: Entity.hh  GameBase.hh
IceSDK/src/: GameBase.cc
IceSDK/src/Assets/: AssetManager.cc
IceSDK/src/Audio/: AudioEngine.cc  Sound.cc
IceSDK/src/Graphics/: SpriteBatch.cc
Tests/: CMakeLists.txt
Tests/IceSDK/: BUILD.gn
Tests/IceSDK/Memory/: Allocator.cc  Buffer.cc  GarbageCollector.cc
Tests/IceSDK/Utils/: FileSystem.cc
examples/BareBones/: main.cc
(+51 files in other folders)
